--- a/ios/weather/Info.plist
+++ b/ios/weather/Info.plist
@@ -37,8 +37,12 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Permita o acesso a sua localização.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Permita o acesso a sua localização.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Permita o acesso a sua localização.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
