--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-permissions": "^3.0.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
