--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'weather' do
   pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse"
   pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
 
+  pod 'RNOpenAppSettings', :path => '../node_modules/react-native-app-settings'
+
   target 'weatherTests' do
     inherit! :complete
     # Pods for testing
